# onnx

./: .gitignore  README  pyproject.toml
src/: iris_sklearn.py
src/sklearn/: iris_inference.py  iris_train_export.py
